--- a/package.json
+++ b/package.json
@@ -9,19 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "ant-design-vue": "^4.0.7",
     "@ant-design/icons-vue": "^6.1.0",
-    "pinia": "^2.1.7",
-    "vue": "^3.3.4",
+    "@intlify/unplugin-vue-i18n": "^1.5.0",
+    "ant-design-vue": "^4.0.7",
     "axios": "^0.27.2",
+    "pinia": "^2.1.7",
     "sass": "^1.55.0",
+    "vue": "^3.3.4",
+    "vue-i18n": "^9.6.5",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@rushstack/eslint-patch": "^1.1.4",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
-    "@rushstack/eslint-patch": "^1.1.4",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "path": "^0.12.7",
