--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
     "@intlify/unplugin-vue-i18n": "^1.5.0",
+    "@vee-validate/i18n": "^4.11.8",
     "ant-design-vue": "^4.0.7",
     "axios": "^1.6.1",
     "pinia": "^2.1.7",
     "sass": "^1.69.5",
+    "vee-validate": "^4.11.8",
     "vue": "^3.3.4",
     "vue-i18n": "^9.6.5",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
